[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/seasoning_bg.jpg" type="Texture" id=1]
[ext_resource path="res://images/pokebowl.png" type="Texture" id=2]
[ext_resource path="res://images/seasoning.png" type="Texture" id=3]
[ext_resource path="res://scripts/8_Seasoning.gd" type="Script" id=4]
[ext_resource path="res://styles/names2.tres" type="DynamicFont" id=5]
[ext_resource path="res://styles/names.tres" type="DynamicFont" id=6]
[ext_resource path="res://styles/titles.tres" type="DynamicFont" id=7]
[ext_resource path="res://styles/whitebox.tres" type="StyleBox" id=8]
[ext_resource path="res://prefab/GameStatus.tscn" type="PackedScene" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="SeasoningBg" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Title" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( -477, 89 )
custom_fonts/font = ExtResource( 7 )
text = "Farmers Market"
align = 1
valign = 1

[node name="Subtitle" type="Label" parent="Title"]
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 119.0
custom_colors/font_color = Color( 0.180392, 0.341176, 0.345098, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Seasoning"
align = 1

[node name="GameStatus" parent="Title" instance=ExtResource( 9 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 150.0
margin_right = 650.0
margin_bottom = 500.0
custom_constants/separation = 15

[node name="SmallOrder" type="Panel" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 8 )

[node name="Label" type="Label" parent="VBoxContainer/SmallOrder"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -11.0
margin_right = 209.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.180392, 0.341176, 0.345098, 1 )
custom_fonts/font = ExtResource( 6 )
text = "$10 for 5 Lb."

[node name="BuyHBox" type="HBoxContainer" parent="VBoxContainer/SmallOrder"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -10.0
margin_bottom = 10.0
custom_constants/separation = 20
alignment = 1

[node name="SubtractButton" type="Button" parent="VBoxContainer/SmallOrder/BuyHBox"]
margin_left = 30.0
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
text = "-"

[node name="CurrentLabel" type="Label" parent="VBoxContainer/SmallOrder/BuyHBox"]
margin_left = 70.0
margin_top = 3.0
margin_right = 130.0
margin_bottom = 17.0
rect_min_size = Vector2( 60, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0 lb."
align = 1
valign = 1

[node name="AddButton" type="Button" parent="VBoxContainer/SmallOrder/BuyHBox"]
margin_left = 150.0
margin_right = 170.0
margin_bottom = 20.0
text = "+"

[node name="MediumOrder" type="Panel" parent="VBoxContainer"]
margin_top = 121.0
margin_right = 600.0
margin_bottom = 228.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 8 )

[node name="Label" type="Label" parent="VBoxContainer/MediumOrder"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -11.5
margin_right = 202.0
margin_bottom = 15.5
custom_colors/font_color = Color( 0.180392, 0.341176, 0.345098, 1 )
custom_fonts/font = ExtResource( 6 )
text = "$10 for 5 lb."

[node name="BuyHBox" type="HBoxContainer" parent="VBoxContainer/MediumOrder"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -10.0
margin_bottom = 10.0
custom_constants/separation = 20
alignment = 1

[node name="SubtractButton" type="Button" parent="VBoxContainer/MediumOrder/BuyHBox"]
margin_left = 30.0
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
text = "-"

[node name="CurrentLabel" type="Label" parent="VBoxContainer/MediumOrder/BuyHBox"]
margin_left = 70.0
margin_top = 3.0
margin_right = 130.0
margin_bottom = 17.0
rect_min_size = Vector2( 60, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0 lb."
align = 1
valign = 1

[node name="AddButton" type="Button" parent="VBoxContainer/MediumOrder/BuyHBox"]
margin_left = 150.0
margin_right = 170.0
margin_bottom = 20.0
text = "+"

[node name="BigOrder" type="Panel" parent="VBoxContainer"]
margin_top = 243.0
margin_right = 600.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 8 )

[node name="Label" type="Label" parent="VBoxContainer/BigOrder"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -11.5
margin_right = 208.0
margin_bottom = 15.5
custom_colors/font_color = Color( 0.180392, 0.341176, 0.345098, 1 )
custom_fonts/font = ExtResource( 6 )
text = "$10 per 5 lb."

[node name="BuyHBox" type="HBoxContainer" parent="VBoxContainer/BigOrder"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -10.0
margin_bottom = 10.0
custom_constants/separation = 20
alignment = 1

[node name="SubtractButton" type="Button" parent="VBoxContainer/BigOrder/BuyHBox"]
margin_left = 30.0
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
text = "-"

[node name="CurrentLabel" type="Label" parent="VBoxContainer/BigOrder/BuyHBox"]
margin_left = 70.0
margin_top = 3.0
margin_right = 130.0
margin_bottom = 17.0
rect_min_size = Vector2( 60, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0 lb."
align = 1
valign = 1

[node name="AddButton" type="Button" parent="VBoxContainer/BigOrder/BuyHBox"]
margin_left = 150.0
margin_right = 170.0
margin_bottom = 20.0
text = "+"

[node name="Recipe" type="Panel" parent="."]
margin_left = 700.0
margin_top = 150.0
margin_right = 974.0
margin_bottom = 500.0
custom_styles/panel = ExtResource( 8 )

[node name="Pokebowl" type="Sprite" parent="Recipe"]
position = Vector2( 124, -28 )
texture = ExtResource( 2 )

[node name="Seasoning" type="Sprite" parent="Recipe"]
position = Vector2( 181, 341 )
texture = ExtResource( 3 )

[node name="Title" type="Label" parent="Recipe"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.0
margin_bottom = -65.0
custom_colors/font_color = Color( 0.180392, 0.341176, 0.345098, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Poke Recipe"
align = 1

[node name="Ingredients" type="Label" parent="Recipe"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -5.0
margin_right = 130.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Fresh Ahi
White Rice
Seasoning"

[node name="Weight" type="Label" parent="Recipe"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -5.0
margin_right = -30.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0.5 lb
0.5 lb
0.2 lb"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 529.0
margin_right = 1024.0
margin_bottom = 564.0
custom_constants/separation = 50
alignment = 1

[node name="ReturnButton" type="Button" parent="HBoxContainer"]
margin_left = 332.0
margin_right = 487.0
margin_bottom = 35.0
rect_min_size = Vector2( 155, 0 )
text = "Cancel"

[node name="BuyButton" type="Button" parent="HBoxContainer"]
margin_left = 537.0
margin_right = 692.0
margin_bottom = 35.0
rect_min_size = Vector2( 155, 0 )
text = "Buy"

[connection signal="pressed" from="VBoxContainer/SmallOrder/BuyHBox/SubtractButton" to="." method="_cartUpdate" binds= [ "sml", -1 ]]
[connection signal="pressed" from="VBoxContainer/SmallOrder/BuyHBox/AddButton" to="." method="_cartUpdate" binds= [ "sml", 1 ]]
[connection signal="pressed" from="VBoxContainer/MediumOrder/BuyHBox/SubtractButton" to="." method="_cartUpdate" binds= [ "med", -1 ]]
[connection signal="pressed" from="VBoxContainer/MediumOrder/BuyHBox/AddButton" to="." method="_cartUpdate" binds= [ "med", 1 ]]
[connection signal="pressed" from="VBoxContainer/BigOrder/BuyHBox/SubtractButton" to="." method="_cartUpdate" binds= [ "lrg", -1 ]]
[connection signal="pressed" from="VBoxContainer/BigOrder/BuyHBox/AddButton" to="." method="_cartUpdate" binds= [ "lrg", 1 ]]
[connection signal="pressed" from="HBoxContainer/ReturnButton" to="." method="_Exit"]
[connection signal="pressed" from="HBoxContainer/BuyButton" to="." method="buyseasoning"]
